ctello/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:43:54 **** Incremental Build of configuration Debug for project Tello ****
make all 
Building file: ../src/main.cpp
Invoking: NVCC Compiler
/usr/local/cuda-10.0/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/main.d" "../src/main.cpp"
In file included from ../src/main.cpp:1:0:
../src/../Display/SDL_gfx.h:4:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <SDL2/SDL.h>
  ^~~~~~
/usr/local/cuda-10.0/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/main.o" "../src/main.cpp"
In file included from ../src/main.cpp:1:0:
../src/../Display/SDL_gfx.h:4:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <SDL2/SDL.h>
  ^~~~~~
../src/main.cpp: In function ‘int main(int, char**)’:
../src/main.cpp:53:53: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  m_drone->sendCommand("battery?", strlen("battery?"));
                                                     ^
Finished building: ../src/main.cpp
 
Building target: Tello
Invoking: NVCC Linker
/usr/local/cuda-10.0/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "Tello"  ./src/Tello_drone.o ./src/main.o  ./Display/SDL_gfx.o   -lSDL2 -lboost_thread -lboost_system -lopencv_videoio -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_imgcodecs
Finished building target: Tello
 
13:44:30 **** Incremental Build of configuration Debug for project Tello ****
make all 
make: Nothing to be done for 'all'.
13:45:22 **** Incremental Build of configuration Debug for project Tello ****
make all 
Building file: ../src/main.cpp
Invoking: NVCC Compiler
/usr/local/cuda-10.0/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/main.d" "../src/main.cpp"
In file included from ../src/main.cpp:1:0:
../src/../Display/SDL_gfx.h:4:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <SDL2/SDL.h>
  ^~~~~~
/usr/local/cuda-10.0/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/main.o" "../src/main.cpp"
In file included from ../src/main.cpp:1:0:
../src/../Display/SDL_gfx.h:4:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <SDL2/SDL.h>
  ^~~~~~
../src/main.cpp: In function ‘int main(int, char**)’:
../src/main.cpp:53:53: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  m_drone->sendCommand("battery?", strlen("battery?"));
                                                     ^
Finished building: ../src/main.cpp
 
Building target: Tello
Invoking: NVCC Linker
/usr/local/cuda-10.0/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "Tello"  ./src/Tello_drone.o ./src/main.o  ./Display/SDL_gfx.o   -lSDL2 -lboost_thread -lboost_system -lopencv_videoio -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_imgcodecs
Finished building target: Tello
 
13:54:59 **** Incremental Build of configuration Debug for project Tello ****
make all 
Building file: ../Display/SDL_gfx.cpp
Invoking: NVCC Compiler
/usr/local/cuda-10.0/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "Display" -M -o "Display/SDL_gfx.d" "../Display/SDL_gfx.cpp"
In file included from ../Display/SDL_gfx.cpp:1:0:
../Display/SDL_gfx.h:4:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <SDL2/SDL.h>
  ^~~~~~
/usr/local/cuda-10.0/bin/nvcc -G -g -O0 --compile  -x c++ -o  "Display/SDL_gfx.o" "../Display/SDL_gfx.cpp"
In file included from ../Display/SDL_gfx.cpp:1:0:
../Display/SDL_gfx.h:4:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <SDL2/SDL.h>
  ^~~~~~
Finished building: ../Display/SDL_gfx.cpp
 
Building target: Tello
Invoking: NVCC Linker
/usr/local/cuda-10.0/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "Tello"  ./src/Tello_drone.o ./src/main.o  ./Display/SDL_gfx.o   -lSDL2 -lboost_thread -lboost_system -lopencv_videoio -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_imgcodecs
Finished building target: Tello
 
14:28:17 **** Incremental Build of configuration Debug for project Tello ****
make all 
Building file: ../src/main.cpp
Invoking: NVCC Compiler
/usr/local/cuda-10.0/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/main.d" "../src/main.cpp"
In file included from ../src/main.cpp:1:0:
../src/../Display/SDL_gfx.h:4:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <SDL2/SDL.h>
  ^~~~~~
/usr/local/cuda-10.0/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/main.o" "../src/main.cpp"
In file included from ../src/main.cpp:1:0:
../src/../Display/SDL_gfx.h:4:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <SDL2/SDL.h>
  ^~~~~~
../src/main.cpp: In function ‘int process_key_press(SDL_KeyboardEvent&)’:
../src/main.cpp:12:20: error: ‘even’ was not declared in this scope
  if(SDL_KEYDOWN == even.type){
                    ^~~~
../src/main.cpp:12:20: note: suggested alternative: ‘event’
  if(SDL_KEYDOWN == even.type){
                    ^~~~
                    event
../src/main.cpp: In function ‘int main(int, char**)’:
../src/main.cpp:75:53: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  m_drone->sendCommand("battery?", strlen("battery?"));
                                                     ^
make: *** [src/main.o] Error 1
src/subdir.mk:21: recipe for target 'src/main.o' failed
14:28:37 **** Incremental Build of configuration Debug for project Tello ****
make all 
Building file: ../src/main.cpp
Invoking: NVCC Compiler
/usr/local/cuda-10.0/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/main.d" "../src/main.cpp"
In file included from ../src/main.cpp:1:0:
../src/../Display/SDL_gfx.h:4:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <SDL2/SDL.h>
  ^~~~~~
/usr/local/cuda-10.0/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/main.o" "../src/main.cpp"
In file included from ../src/main.cpp:1:0:
../src/../Display/SDL_gfx.h:4:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <SDL2/SDL.h>
  ^~~~~~
../src/main.cpp: In function ‘int main(int, char**)’:
../src/main.cpp:75:53: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  m_drone->sendCommand("battery?", strlen("battery?"));
                                                     ^
Finished building: ../src/main.cpp
 
Building target: Tello
Invoking: NVCC Linker
/usr/local/cuda-10.0/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "Tello"  ./src/Tello_drone.o ./src/main.o  ./Display/SDL_gfx.o   -lSDL2 -lboost_thread -lboost_system -lopencv_videoio -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_imgcodecs
Finished building target: Tello
 
14:29:45 **** Incremental Build of configuration Debug for project Tello ****
make all 
Building file: ../src/Tello_drone.cpp
Invoking: NVCC Compiler
/usr/local/cuda-10.0/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/Tello_drone.d" "../src/Tello_drone.cpp"
/usr/local/cuda-10.0/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/Tello_drone.o" "../src/Tello_drone.cpp"
../src/Tello_drone.cpp: In member function ‘int Tello_drone::connectDrone()’:
../src/Tello_drone.cpp:29:43: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
   sendCommand("command", strlen("command"));
                                           ^
../src/Tello_drone.cpp: In member function ‘int Tello_drone::streamon()’:
../src/Tello_drone.cpp:61:44: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  sendCommand("streamon", strlen("streamon"));
                                            ^
../src/Tello_drone.cpp: In member function ‘int Tello_drone::streamoff()’:
../src/Tello_drone.cpp:68:46: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  sendCommand("streamoff", strlen("streamoff"));
                                              ^
Finished building: ../src/Tello_drone.cpp
 
Building target: Tello
Invoking: NVCC Linker
/usr/local/cuda-10.0/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "Tello"  ./src/Tello_drone.o ./src/main.o  ./Display/SDL_gfx.o   -lSDL2 -lboost_thread -lboost_system -lopencv_videoio -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_imgcodecs
Finished building target: Tello
 
